<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrarseActivity">

    <LinearLayout
        android:id="@+id/id_LinearLay_Registrar"
        android:layout_width="344dp"
        android:layout_height="601dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.876">

        <EditText
            android:id="@+id/id_correo_Registrarse_Activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Escribe aqui un correo electrónico"
            android:inputType="textPersonName"
            android:text="@string/text_correo_Registrarse_Activity" />

        <EditText
            android:id="@+id/id_contrasena_Registrarse_Activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Contraseña"
            android:inputType="textPassword"
            android:text="@string/text_contraseña_Registrarse_Activity" />

        <EditText
            android:id="@+id/id_contrasenaConfirmacion_Activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Confirmacion Contraseña"
            android:inputType="textPassword"
            android:text="@string/text_contraseñaConfirmacion_Registrarse_Activity" />

        <Button
            android:id="@+id/id_btn_Registrarse_Activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="registrarUsuario"
            android:text="@string/btn_Registrarse_Activity" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>