<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IniciarSesionActivity">

    <LinearLayout
        android:id="@+id/id_LinearLayout_InicarSesion"
        android:layout_width="346dp"
        android:layout_height="607dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.87">

        <EditText
            android:id="@+id/id_correo_IniciarSesion_Activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Escriba aqui un correo electrónico"
            android:inputType="textPersonName"
            android:text="@string/text_correo_iniciar_sesion_Activity" />

        <EditText
            android:id="@+id/id_contrasena_IniciarSesion_Activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Contraseña"
            android:inputType="textPassword"
            android:text="@string/text_contraseña_iniciar_sesion_Activity" />

        <Button
            android:id="@+id/id_btn_IniciarSesion_Activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="iniciarSesion"
            android:text="@string/btn_iniciar_sesion" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>