<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="8dp"
        android:paddingBottom="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.961">

        <Button
            android:id="@+id/id_cerrarSesion_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="cerrarSesion"
            android:text="@string/btn_cerrar_sesion"
            android:visibility="gone"
            android:theme="@style/RaisedButtonDark"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/id_btn_iniciar_sesion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="irIniciar"
                android:text="@string/btn_iniciar_pantalla"
                tools:visibility="visible"
                android:theme="@style/RaisedButtonDark"/>

            <Button
                android:id="@+id/id_btn_registrar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="irRegistrarse"
                android:text="@string/btn_registrar_pantalla"
                tools:visibility="visible"
                android:theme="@style/RaisedButtonDark"/>

        </LinearLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:dividerPadding="@dimen/cardview_default_radius"
            android:gravity="center">

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:onClick="irRegistroLeche">

                <androidx.cardview.widget.CardView
                    android:layout_width="365dp"
                    android:layout_height="73dp"
                    android:animationCache="true"
                    app:cardBackgroundColor="#B10606"
                    app:cardCornerRadius="1dp"
                    app:cardUseCompatPadding="false">

                    <LinearLayout
                        android:layout_width="350dp"
                        android:layout_height="fill_parent"
                        android:gravity="center|center_horizontal"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/descripcion_noticias" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <ImageView
                                android:id="@+id/imageView"
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                app:srcCompat="@drawable/col2" />

                            <Button
                                android:id="@+id/id_btn_noticias"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:onClick="irNoticias"
                                android:text="@string/noticias_btn" />
                        </LinearLayout>

                    </LinearLayout>


                </androidx.cardview.widget.CardView>
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center">

                <androidx.cardview.widget.CardView
                    android:layout_width="fill_parent"
                    android:layout_height="73dp"
                    app:cardBackgroundColor="#4FA7ED"
                    app:cardCornerRadius="1dp"
                    app:cardUseCompatPadding="false">

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView2"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/descripcion_consejos" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <ImageView
                                android:id="@+id/imageView2"
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                app:srcCompat="@drawable/col" />

                            <Button
                                android:id="@+id/id_btn_consejos"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:onClick="irConsejos"
                                android:text="@string/consejos_btn" />
                        </LinearLayout>

                    </LinearLayout>


                </androidx.cardview.widget.CardView>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <androidx.cardview.widget.CardView
                    android:layout_width="200dp"
                    android:layout_height="73dp"
                    app:cardBackgroundColor="#10EA18"
                    app:cardCornerRadius="1dp"
                    app:cardUseCompatPadding="false">

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView7"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/descripcion_libros_gratis" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <ImageView
                                android:id="@+id/imageView7"
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                app:srcCompat="@drawable/col2" />

                            <Button
                                android:id="@+id/id_btn_libros_gratis"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:onClick="irLibros"
                                android:text="@string/libros_btn" />
                        </LinearLayout>

                    </LinearLayout>


                </androidx.cardview.widget.CardView>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <androidx.cardview.widget.CardView
                    android:layout_width="200dp"
                    android:layout_height="73dp"
                    app:cardBackgroundColor="#3F51B5"
                    app:cardCornerRadius="1dp"
                    app:cardUseCompatPadding="false">

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView8"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/descripcion_razas" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <ImageView
                                android:id="@+id/imageView8"
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                app:srcCompat="@drawable/col" />

                            <Button
                                android:id="@+id/id_btn_Razas_de_ganado"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:onClick="irRazas"
                                android:text="@string/razas_btn" />
                        </LinearLayout>

                    </LinearLayout>


                </androidx.cardview.widget.CardView>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <androidx.cardview.widget.CardView
                    android:layout_width="200dp"
                    android:layout_height="73dp"
                    app:cardBackgroundColor="#FFED52"
                    app:cardCornerRadius="1dp"
                    app:cardUseCompatPadding="true">

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:gravity="center_vertical"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView77"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/descripcion_tipos_ganado" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <ImageView
                                android:id="@+id/imageView77"
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                app:srcCompat="@drawable/col2" />

                            <Button
                                android:id="@+id/id_btn_tipos_ganado"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:onClick="irTipos"
                                android:text="@string/tipos_btn" />
                        </LinearLayout>

                    </LinearLayout>


                </androidx.cardview.widget.CardView>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <androidx.cardview.widget.CardView
                    android:layout_width="200dp"
                    android:layout_height="73dp"
                    app:cardBackgroundColor="#C51162"
                    app:cardCornerRadius="1dp"
                    app:cardUseCompatPadding="false">

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:gravity="center_vertical"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView88"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/descripcion_registro_leche" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <ImageView
                                android:id="@+id/imageView88"
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                app:srcCompat="@drawable/col2" />

                            <Button
                                android:id="@+id/id_btn_registro_leche"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:onClick="irRegistroLeche"
                                android:text="@string/registro_leche_btn" />
                        </LinearLayout>

                    </LinearLayout>


                </androidx.cardview.widget.CardView>
            </TableRow>

        </TableLayout>
    </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>